# my_tmux_conf

./: .bandit  .envrc  .flake8  .gitignore  .markdownlint.yaml  .olint  .olint.conf  .prettierignore  .pylintrc  .shellchecker  CLAUDE.md  README.md  TODO.md  alpine.py  base.py  base_config.py  default_plugins.py  deploy  hetz1.py  ish-hetz1.py  ish_console.py  ish_host.py  jacmac.py  jacpad-aok.py  jacpad.py  jacphone.py  mtc_utils.py  pad5-aok.py  pad5.py  progress-venv-build.sh  pyproject.toml  pyrightconfig.json  ruff.toml  setup.cfg  special_console.py  t2.py  tablet_bt_kbd.py  tablet_kbd.py  tmate.py  ubu.py  (+3 more)
.claude/: base.md  settings.json
.helix/: languages.toml
.olint_plugin_override/: black  isort
.olint_plugin_overrides/: bandit  codespell  flake8  isort  markdownlint  pymarkdown  pyright  ruff  yamllint
color-tests/: 24-bit-color.sh  256-colournames.sh  README.md
docs/: KEYBINDINGS.md  available_keys.md  nav_hints.md
hostnames/: arch-jac-t1.py  hetz1.py  ish-hetz1.py  jacdroid.py  jacmac.py  jacpad.py  jacphone.py  pad5.py  ubu.py  ubudt.py  win10.py
olint_plugins/: ansible-lint  bandit  bashate  black  checkbashisms  cppcheck  flake8  isort  jsonlint  markdownlint  mypy  pycodestyle  pyflakes  pylint  pylintrc  pymarkdown  pyright  rslint  ruff  shellcheck
sample_hosts/: arch-jac-t1.py  cx23.py  hetz1.py  hetz2.py  ish-hetz1.py  jacaok.py  jacdroid.py  jacmac.py  jacpad.py  jacphone.py  kajsa.py  oldpro.py  pad5.py  ubu.py
sb/: sb_acceptance.py  sb_cloud.py  sb_ish.py  sb_local.py  sb_muted.py  sb_muted_ish.py  sb_production.py  sb_t2.py  (+3 more)
(+45 files in other folders)
