[project]
requires-python = ">=3.11"

[tool.black]
include = '\.pyi?$'
exclude = '''
/(
    \.venv
)/
'''

[tool.isort]
profile = "black"
combine_as_imports = true
sections = ["FUTURE", "STDLIB", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]

[tool.mypy]
python_version = "3.11"
exclude = [".venv", "stuff/dead_code.py"]
# strict = true
# ignore_missing_imports = true
show_error_codes = true
warn_unused_configs = true
no_implicit_reexport = true


[tool.pymarkdown]
# plugins.no-inline-html.enabled = false
#plugins.line-length.enabled = false
plugins.line-length.line_length = 92
plugins.line-length.code_block_line_length = 92
plugins.md033.allowed_elements = "nbsp,prefix"

#[tool.pymarkdown.plugins.line-length]
#line_length = 92
#
#[tool.pymarkdown.plugins.md033]
#allowed_elements = "nbsp,prefix"

[tool.pyright]
exclude = [".venv", "**/__pycache__"]
reportMissingImports = "error"
reportMissingTypeStubs = false

#[tool.ruff]
# target-version inferred automatically
#line-length = 92

[tool.ruff.lint]

# more opinionated and modernization-oriented
select = [
    "E",
    "F",
    "W",
    "I",
    "UP",
]

# more conservative selections
# select = [
#     "E4",
#     "E7",
#     "E9",
#     "F",
#     "I",
#     "B",
#     "UP",
# ]

fixable = [
    "I",
    "UP",
]

ignore = [
    "E501",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"
